# catetus

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  INSTALL.md  LAUNCH4_BLOCKER.md  LICENSE  Makefile  OPERATOR-PUNCH-LIST.md  README.md  SECURITY.md  bootstrap-git.sh  gaussian_splat_prd_eng_plan (1).md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  vercel.json
apps/api/: .dockerignore  BILLING.md  CHECKOUT.md  Cargo.toml  Dockerfile  PRODUCTION-HARDENING.md  README.md  STORE-BACKENDS.md  fly.toml  openapi.yaml
apps/api/migrations/: 0003_audit_events.sql  0003_team_signups.sql
apps/api/scripts/: smoke.sh
apps/api/src/: audit.rs  billing.rs  checkout.rs  customer_dashboard.rs  lib.rs  license.rs  main.rs  modal_client.rs  pricing.rs  ratelimit.rs  ratings.rs  store.rs
apps/api/tests/: audit.rs  billing.rs  checkout.rs  customer_dashboard.rs  import.rs  license.rs  pricing.rs  ratelimit.rs  ratings.rs  store_trait.rs
apps/bench-ingest/: README.md  pyproject.toml
crates/catetus-bench/: Cargo.toml
crates/catetus-bench/src/: lib.rs
crates/catetus-bench/tests/: smoke.rs
crates/catetus-cli/: Cargo.toml  README.md
crates/catetus-cli/src/: encode_api.rs  license.rs  main.rs
crates/catetus-cli/tests/: cli_auto_jacobian.rs  cli_smoke.rs  cli_tier_routing.rs  encode_via_api.rs
crates/catetus-fidelity/: Cargo.toml
crates/catetus-fidelity/data/: metadata-v0.5.json
crates/catetus-fidelity/src/: features.rs  lib.rs
crates/catetus-fidelity/tests/: feature_fixture.rs  python_parity.rs
crates/catetus-gltf/: Cargo.toml
crates/catetus-gltf/src/: lib.rs  v5_tail.rs
crates/catetus-gltf/tests/: khr_rc_conformance.rs  mesh_quantization.rs  palette_elision.rs  roundtrip.rs  sf_extension_decoders.rs  v5_tail_e2e.rs
crates/catetus-jacobian/: ALGORITHM.md  Cargo.toml
crates/catetus-jacobian/examples/: jacobian_bench.rs
crates/catetus-jacobian/src/: lib.rs
crates/catetus-jacobian/tests/: bonsai_correlation.rs  bonsai_per_attribute_correlation.rs
crates/catetus-license/: Cargo.toml
crates/catetus-license/src/: lib.rs
crates/catetus-lodge/: Cargo.toml
crates/catetus-lodge/src/: lib.rs
crates/catetus-mcp/: Cargo.toml
crates/catetus-mcp/src/: main.rs
crates/catetus-meson/: Cargo.toml
crates/catetus-meson/src/: bin.rs  lib.rs
crates/catetus-optimize/: Cargo.toml
crates/catetus-optimize/examples/: emit_sample_tileset.rs  frontf_mint_jacobian.rs  frontf_probe.rs  frontf_progressive.rs
crates/catetus-optimize/src/: lib.rs  lod_merge.rs  passes.rs  pipeline.rs  presets.rs  splat_delta.rs  tileset.rs  vq_palette.rs
crates/catetus-optimize/tests/: geospatial_tileset.rs  passes.rs  sh_rest_quant_e2e.rs  splat_delta.rs  vq_palette_elision_e2e.rs
crates/catetus-ply/: CHANGELOG.md  Cargo.toml
crates/catetus-ply/src/: lib.rs  progressive.rs
crates/catetus-ply/tests/: fast_decoder_equivalence.rs  ply_roundtrip.rs  write_roundtrip.rs
crates/catetus-spz/: Cargo.toml
crates/catetus-spz/src/: lib.rs
crates/catetus-spz/tests/: roundtrip.rs  swvq_skip.rs
crates/catetus-tileset/: Cargo.toml  README.md  STATUS.md  STREAM2_BLOCKER.md
crates/catetus-tileset/examples/: build_tileset.rs  dwire_emit.rs  tile_codec_bench.rs
crates/catetus-tileset/src/: codec.rs  glb_codec.rs  lib.rs  manifest.rs  octree.rs  plan.rs  shared_palette.rs
crates/catetus-tileset/tests/: glb_tileset_roundtrip.rs  shared_palette_tileset.rs  supersplat_compat.rs
crates/catetus-usd/: Cargo.toml  SPEC-GAPS.md
crates/catetus-usd/fixtures/: particle_field.usda
crates/catetus-usd/src/: lib.rs  usda.rs  usdc.rs
crates/catetus-usd/tests/: roundtrip.rs  usdc_roundtrip.rs  usdc_usdcat.rs
crates/splatforge-bench/: Cargo.toml
crates/splatforge-bench/src/: lib.rs
crates/splatforge-bench/tests/: smoke.rs
crates/splatforge-cli/: Cargo.toml  README.md
crates/splatforge-cli/src/: license.rs  main.rs
crates/splatforge-cli/tests/: cli_smoke.rs
crates/splatforge-core/: Cargo.toml
crates/splatforge-core/src/: coords.rs  hash.rs  ir.rs  lib.rs  report.rs
crates/splatforge-core/tests/: ir_hash.rs
crates/splatforge-fidelity/: Cargo.toml
crates/splatforge-fidelity/data/: metadata-v0.4.json
crates/splatforge-fidelity/src/: features.rs  lib.rs  weights_v04.rs
crates/splatforge-fidelity/tests/: feature_fixture.rs  python_parity.rs
crates/splatforge-gltf/: CHANGELOG.md  Cargo.toml
crates/splatforge-gltf/src/: lib.rs
crates/splatforge-gltf/tests/: khr_rc_conformance.rs  mesh_quantization.rs  roundtrip.rs
crates/splatforge-khr-conformance/: CHANGELOG.md  Cargo.toml  conformance.md
crates/splatforge-khr-conformance/fixtures/: 01_valid_baseline.glb  02_valid_baseline.gltf  03_valid_quantized.glb  04_valid_with_sh.glb  05_valid_default_methods.glb  05_valid_spz_stub.glb  06_invalid_missing_ext_used.glb  07_invalid_no_rotation.gltf  08_invalid_rotation_vec3.gltf  09_invalid_position_no_minmax.gltf  10_invalid_count_mismatch.gltf  11_valid_spz_compressed.glb  12_invalid_spz_missing_ext_used.glb  13_invalid_spz_wrong_magic.glb
crates/splatforge-khr-conformance/scripts/: generate-fixtures.sh
crates/splatforge-khr-conformance/src/: lib.rs
crates/splatforge-khr-conformance/tests/: fixtures.rs
crates/splatforge-lodge/: Cargo.toml
crates/splatforge-lodge/src/: lib.rs
crates/splatforge-mcp/: Cargo.toml
crates/splatforge-mcp/src/: main.rs
crates/splatforge-optimize/: Cargo.toml
crates/splatforge-optimize/examples/: emit_sample_tileset.rs
crates/splatforge-optimize/src/: lib.rs  passes.rs  pipeline.rs  presets.rs  tileset.rs
crates/splatforge-optimize/tests/: geospatial_tileset.rs  passes.rs
crates/splatforge-ply/: CHANGELOG.md  Cargo.toml
crates/splatforge-ply/src/: lib.rs  progressive.rs
crates/splatforge-ply/tests/: fast_decoder_equivalence.rs  ply_roundtrip.rs  write_roundtrip.rs
crates/splatforge-posthac/: Cargo.toml
crates/splatforge-posthac/src/: bin.rs  lib.rs
crates/splatforge-spz/: Cargo.toml
crates/splatforge-usd-conformance/: Cargo.toml  conformance.md
(+6376 files in other folders)
