[workspace]
resolver = "2"
members = [
    "crates/splatforge-core",
    "crates/splatforge-ply",
    "crates/splatforge-spz",
    "crates/splatforge-posthac",
    "crates/splatforge-gltf",
    "crates/splatforge-khr-conformance",
    "crates/splatforge-usd-conformance",
    "crates/splatforge-optimize",
    "crates/splatforge-bench",
    "crates/splatforge-cli",
    "crates/splatforge-mcp",
    "crates/splatforge-fidelity",
    "crates/splatforge-usd",
    "apps/api",
    "packages/viewer-mobile/core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
repository = "https://github.com/splatforge/splatforge"

[workspace.dependencies]
splatforge-core      = { path = "crates/splatforge-core" }
splatforge-ply       = { path = "crates/splatforge-ply" }
splatforge-spz       = { path = "crates/splatforge-spz" }
splatforge-posthac   = { path = "crates/splatforge-posthac" }
splatforge-gltf      = { path = "crates/splatforge-gltf" }
splatforge-khr-conformance = { path = "crates/splatforge-khr-conformance" }
splatforge-usd-conformance = { path = "crates/splatforge-usd-conformance" }
splatforge-optimize  = { path = "crates/splatforge-optimize" }
splatforge-bench     = { path = "crates/splatforge-bench" }
splatforge-usd       = { path = "crates/splatforge-usd" }
splatforge-fidelity  = { path = "crates/splatforge-fidelity" }

# Shared dependencies
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
byteorder   = "1.5"
clap        = { version = "4.5", features = ["derive"] }
rayon       = "1.10"
glam        = { version = "0.27", features = ["serde"] }
blake3      = "1.5"
base64      = "0.22"
flate2      = "1.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
