[workspace]
resolver = "2"
members = [
    "crates/splatforge-core",
    "crates/splatforge-ply",
    "crates/splatforge-spz",
    "crates/splatforge-posthac",
    "crates/splatforge-meson",
    "crates/splatforge-gltf",
    "crates/splatforge-khr-conformance",
    "crates/splatforge-usd-conformance",
    "crates/splatforge-optimize",
    "crates/splatforge-bench",
    "crates/splatforge-cli",
    "crates/splatforge-mcp",
    "crates/splatforge-fidelity",
    "crates/splatforge-usd",
    "crates/splatforge-license",
    "crates/splatforge-lodge",
    "apps/api",
    "packages/viewer-mobile/core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
repository = "https://github.com/splatforge/splatforge"

[workspace.dependencies]
splatforge-core      = { path = "crates/splatforge-core" }
splatforge-ply       = { path = "crates/splatforge-ply" }
splatforge-spz       = { path = "crates/splatforge-spz" }
splatforge-posthac   = { path = "crates/splatforge-posthac" }
splatforge-meson     = { path = "crates/splatforge-meson" }
splatforge-gltf      = { path = "crates/splatforge-gltf" }
splatforge-khr-conformance = { path = "crates/splatforge-khr-conformance" }
splatforge-usd-conformance = { path = "crates/splatforge-usd-conformance" }
splatforge-optimize  = { path = "crates/splatforge-optimize" }
splatforge-bench     = { path = "crates/splatforge-bench" }
splatforge-usd       = { path = "crates/splatforge-usd" }
splatforge-fidelity  = { path = "crates/splatforge-fidelity" }
splatforge-license   = { path = "crates/splatforge-license" }
splatforge-lodge     = { path = "crates/splatforge-lodge" }

# Shared dependencies
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
byteorder   = "1.5"
clap        = { version = "4.5", features = ["derive"] }
rayon       = "1.10"
glam        = { version = "0.27", features = ["serde"] }
blake3      = "1.5"
base64      = "0.22"
flate2      = "1.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# -----------------------------------------------------------------------------
# Distribution config — consumed by `cargo dist` (>=0.27) and read by the
# hand-written `.github/workflows/release.yml` matrix as the source of truth
# for which (binary, target) pairs we ship. Keep these lists in sync with:
#   - `distrib/homebrew/splatforge.rb`  (the formula's `bin.install ...`)
#   - `distrib/npm/install.js`          (the postinstall manifest lookup)
#   - `.github/workflows/release.yml`   (the strategy matrix)
# -----------------------------------------------------------------------------
[workspace.metadata.dist]
# Pinned for reproducibility; bump deliberately.
cargo-dist-version = "0.27.0"
# The three user-facing binaries. Internal `*-fixtures` binaries are
# intentionally NOT shipped — they're for test/regen flows only.
bins = ["splatforge", "splatforge-khr-validate", "splatforge-usd-validate"]
# Cross-compilation targets. macOS arm64+x86_64, Linux glibc x86_64+arm64,
# Windows x86_64. Linux uses glibc (not musl) for now — splatforge-cli pulls
# in tiny_http + zstd which compile on either, but glibc-x86_64 is the
# default GH-runner shape and we don't want to maintain a musl bootstrap.
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
unix-archive = ".tar.gz"
windows-archive = ".zip"
include = ["LICENSE", "README.md", "CHANGELOG.md"]
# `installers = ["shell", "powershell", "homebrew", "npm"]` would have cargo-dist
# generate everything; we instead hand-author the homebrew + npm side under
# `distrib/` so they survive an eventual cargo-dist removal.
installers = []
ci = ["github"]
pr-run-mode = "skip"
