[workspace]
resolver = "2"
members = [
    "crates/catetus-core",
    "crates/catetus-ply",
    "crates/catetus-spz",
    # `catetus-posthac` moved to catetus/catetus-private 2026-05-19 (open-core split).
    "crates/catetus-meson",
    "crates/catetus-gltf",
    # `catetus-sog` moved to catetus/catetus-private 2026-05-19 (open-core split).
    "crates/catetus-khr-conformance",
    "crates/catetus-usd-conformance",
    "crates/catetus-optimize",
    "crates/catetus-bench",
    "crates/catetus-cli",
    "crates/catetus-jacobian",
    "crates/catetus-mcp",
    "crates/catetus-fidelity",
    "crates/catetus-usd",
    "crates/catetus-license",
    "crates/catetus-lodge",
    # `apps/api` moved to catetus/catetus-private 2026-05-19 (open-core split).
    # `apps/worker` (Modal training) moved alongside.
    "packages/viewer-mobile/core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
repository = "https://github.com/catetus/catetus"

[workspace.dependencies]
catetus-core      = { path = "crates/catetus-core" }
catetus-ply       = { path = "crates/catetus-ply" }
catetus-spz       = { path = "crates/catetus-spz" }
# `catetus-posthac` + `catetus-sog` moved to catetus/catetus-private 2026-05-19.
catetus-meson     = { path = "crates/catetus-meson" }
catetus-gltf      = { path = "crates/catetus-gltf" }
catetus-khr-conformance = { path = "crates/catetus-khr-conformance" }
catetus-usd-conformance = { path = "crates/catetus-usd-conformance" }
catetus-optimize  = { path = "crates/catetus-optimize" }
catetus-bench     = { path = "crates/catetus-bench" }
catetus-jacobian  = { path = "crates/catetus-jacobian" }
catetus-usd       = { path = "crates/catetus-usd" }
catetus-fidelity  = { path = "crates/catetus-fidelity" }
catetus-license   = { path = "crates/catetus-license" }
catetus-lodge     = { path = "crates/catetus-lodge" }

# Shared dependencies
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
byteorder   = "1.5"
clap        = { version = "4.5", features = ["derive"] }
rayon       = "1.10"
glam        = { version = "0.27", features = ["serde"] }
blake3      = "1.5"
base64      = "0.22"
flate2      = "1.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# -----------------------------------------------------------------------------
# Distribution config — consumed by `cargo dist` (>=0.27) and read by the
# hand-written `.github/workflows/release.yml` matrix as the source of truth
# for which (binary, target) pairs we ship. Keep these lists in sync with:
#   - `distrib/homebrew/catetus.rb`  (the formula's `bin.install ...`)
#   - `distrib/npm/install.js`          (the postinstall manifest lookup)
#   - `.github/workflows/release.yml`   (the strategy matrix)
# -----------------------------------------------------------------------------
[workspace.metadata.dist]
# Pinned for reproducibility; bump deliberately.
cargo-dist-version = "0.27.0"
# The three user-facing binaries. Internal `*-fixtures` binaries are
# intentionally NOT shipped — they're for test/regen flows only.
bins = ["catetus", "catetus-khr-validate", "catetus-usd-validate"]
# Cross-compilation targets. macOS arm64+x86_64, Linux glibc x86_64+arm64,
# Windows x86_64. Linux uses glibc (not musl) for now — catetus-cli pulls
# in tiny_http + zstd which compile on either, but glibc-x86_64 is the
# default GH-runner shape and we don't want to maintain a musl bootstrap.
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
unix-archive = ".tar.gz"
windows-archive = ".zip"
include = ["LICENSE", "README.md", "CHANGELOG.md"]
# `installers = ["shell", "powershell", "homebrew", "npm"]` would have cargo-dist
# generate everything; we instead hand-author the homebrew + npm side under
# `distrib/` so they survive an eventual cargo-dist removal.
installers = []
ci = ["github"]
pr-run-mode = "skip"
