[package]
name = "splatforge-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hosted optimize API for SplatForge — Axum endpoint that hands jobs off to the Modal worker."

[[bin]]
name = "splatforge-api"
path = "src/main.rs"

[dependencies]
splatforge-core = { workspace = true }

# Web stack — Axum is the canonical Rust HTTP server for this kind of API,
# integrates cleanly with tokio and tower middleware.
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs + time
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors + tracing
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client — used to call into the Modal worker for the actual optimize work.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Stream adapters — converts axum's body stream into reqwest::Body without
# buffering. Already pulled in transitively; declaring it explicitly lets
# the upload handler stream 200 MB splats without touching the workspace deps.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Env config
dotenvy = "0.15"

# Persistent job store. SQLite is enough for the single-instance droplet
# deploy; the surface in `store.rs` is the only place that depends on the
# concrete backend so swapping to Postgres later is a one-file change.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }
