[package]
name = "splatforge-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hosted optimize API for SplatForge — Axum endpoint that hands jobs off to the Modal worker."

[lib]
name = "splatforge_api"
path = "src/lib.rs"

[[bin]]
name = "splatforge-api"
path = "src/main.rs"

[dependencies]
splatforge-core = { workspace = true }
splatforge-license = { workspace = true }

# Web stack — Axum is the canonical Rust HTTP server for this kind of API,
# integrates cleanly with tokio and tower middleware.
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs + time
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors + tracing
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client — used to call into the Modal worker for the actual optimize work.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Stream adapters — converts axum's body stream into reqwest::Body without
# buffering. Already pulled in transitively; declaring it explicitly lets
# the upload handler stream 200 MB splats without touching the workspace deps.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Env config
dotenvy = "0.15"

# Persistent job store. Two backends are compiled in: SQLite (single-
# instance Fly deploy — what the design-partner program runs on) and
# Postgres (multi-instance promotion path called out in v2 plan §3b).
# The trait abstraction in `store/mod.rs` is the only place that knows
# which backend is in use; everything above it talks `dyn JobStoreApi`.
# Swapping at deploy time is `DATABASE_URL=sqlite://…` vs `postgres://…`.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }

# Trait abstraction over the two store backends. Native `async fn` in
# traits is stable, but the resulting traits are NOT object-safe — and
# `AppState` holds an `Arc<dyn JobStoreApi + Send + Sync>` so handlers
# can be backend-agnostic. `async-trait` desugars to boxed futures
# which restores object-safety. The runtime cost (one extra heap
# allocation per call) is negligible next to a DB round-trip.
async-trait = "0.1"

# Stripe webhook signature verification — HMAC-SHA256 against the raw body.
# We deliberately avoid `async-stripe`: its Meter Events surface lags the
# Stripe API (the modern 2024+ usage-based pattern) and pulls in a large
# dep graph for what is, at this layer, two form-encoded POSTs.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = { workspace = true }
subtle = "2.5"

# Cryptographically-strong randomness for minting Team-tier API keys
# (sf_live_<24 alphanumeric>) and the per-session claim_token used to
# gate /v1/checkout/reveal. `thread_rng().sample_iter(Alphanumeric)` is
# the same source the WorkOS branch's auth.rs uses, so the contract
# carries forward byte-for-byte once that branch merges.
rand = "0.8"

[dev-dependencies]
testcontainers = "0.20"
testcontainers-modules = { version = "0.8", features = ["postgres"] }
tokio = { version = "1.40", features = ["full"] }
wiremock = "0.6"
