[project]
name = "catetus-bench-ingest"
version = "0.1.0"
description = "SplatBench v2 ingest harness — turn a PLY URL into a measured leaderboard row."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.scripts]
bench-ingest = "bench_ingest.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
