[package]
name = "catetus-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tiny benchmark harness for Catetus fixtures."

[dependencies]
catetus-core = { workspace = true }
catetus-ply = { workspace = true }
catetus-optimize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
