[package]
name = "catetus-fidelity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Predict-only fidelity scorer for Gaussian-splat scenes (v0.4 MLP)."

[dependencies]
catetus-core = { workspace = true }
catetus-ply  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }

[[bin]]
name = "catetus-fidelity"
path = "src/bin/catetus_fidelity.rs"

[dev-dependencies]
tempfile = "3"
