[package]
name = "catetus-lodge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LODGE-style hierarchical level-of-detail builder for Catetus."

[dependencies]
catetus-core = { workspace = true }
catetus-ply  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
blake3     = { workspace = true }

[dev-dependencies]
tempfile = "3"
