[package]
name = "splatforge-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tiny benchmark harness for SplatForge fixtures."

[dependencies]
splatforge-core = { workspace = true }
splatforge-ply = { workspace = true }
splatforge-optimize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
