[package]
name = "splatforge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The `splatforge` command-line tool."

[[bin]]
name = "splatforge"
path = "src/main.rs"

[dependencies]
splatforge-core = { workspace = true }
splatforge-ply = { workspace = true }
splatforge-spz = { workspace = true }
splatforge-gltf = { workspace = true }
splatforge-usd = { workspace = true }
splatforge-optimize = { workspace = true }
splatforge-bench = { workspace = true }
splatforge-fidelity = { workspace = true }
splatforge-lodge    = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12"
# Pure-Rust zstd encoder for the optional `--compress` flag on `optimize`.
# v0.13.x is API-stable, no system zstd required.
zstd = { version = "0.13", default-features = false }


# License verification + on-prem `serve` command. The CLI never holds
# the signing key — it only verifies signatures against the embedded
# public key.
splatforge-license = { workspace = true }
# Talking to the SplatForge API for `license refresh` and the
# `/heartbeat` ping from `serve`. blocking variant keeps the CLI
# free of a tokio runtime in the optimize path.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
