[package]
name = "splatforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical splat intermediate representation, hashing, and analyze report types."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
ryu = "1"

[dev-dependencies]
