[package]
name = "splatforge-gltf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "glTF 2.0 + KHR_gaussian_splatting writer/reader for SplatForge."

[dependencies]
splatforge-core = { workspace = true }
splatforge-spz  = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
