[package]
name = "splatforge-gltf"
# Explicit version (not workspace) so the glTF writer can advance with each
# KHR_gaussian_splatting spec revision. See CHANGELOG.md in this crate.
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "glTF 2.0 + KHR_gaussian_splatting writer/reader for SplatForge."

[dependencies]
splatforge-core = { workspace = true }
splatforge-spz  = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
splatforge-khr-conformance = { workspace = true }
serde_json = { workspace = true }
