[package]
name = "splatforge-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol server for SplatForge — exposes analyze/list_presets/optimize over stdio so any MCP-compatible LLM client (Claude Desktop, Cursor, Cline, Zed, …) can drive the toolkit."

[[bin]]
name = "splatforge-mcp"
path = "src/main.rs"

[dependencies]
splatforge-core      = { workspace = true }
splatforge-ply       = { workspace = true }
splatforge-spz       = { workspace = true }
splatforge-gltf      = { workspace = true }
splatforge-optimize  = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
